Noticed a small accessibiliy issue
Keyboard navigation made the headers hard to read. I added "focus" to
the rule as well as hover.

--- a/app/webpacker/src/stylesheets/application.scss
+++ b/app/webpacker/src/stylesheets/application.scss
@@ -18,7 +18,7 @@ header {
 
   a {
     color: $header-color;
-    &:hover {
+    &:hover, &:focus {
       color: scale-color($header-color, $lightness: -15%);
     }
   }
